# wosac-preflight

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: smoke.yml
agent/: TARGET_BRIEF_WOSAC.md
dashboard/: app.js  index.html  sample_receipt.json  smoke_receipt.json  styles.css
docker/: Dockerfile  score_one.py
scripts/: publish_site.sh
tests/: test_cli.py  test_constants.py  test_docker_runner.py  test_doctor.py  test_receipt.py
wosac_preflight/: __init__.py  cli.py  constants.py  docker_runner.py  doctor.py  receipt.py
