[project]
name = "wosac-preflight"
version = "0.1.0"
description = "Local WOSAC evaluator and debugger before 44k-scenario leaderboard submission."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "protobuf>=4.25",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
wosac-preflight = "wosac_preflight.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wosac_preflight"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
